# aerial_robot_3rdparty

./: .travis.sh  .travis.yml  README.md
.github/workflows/: ros_aarch64_test.yml  ros_test.yml
aerial_robot_3rdparty/: CMakeLists.txt  package.xml
casadi_eigen/: CMakeLists.txt  package.xml
casadi_eigen/include/CasadiEigen/: CasadiEigen.h
casadi_eigen/src/: CasadiEigen.cpp  casadi_sample.cpp  casadi_sample3.cpp
casadi_sample/: CMakeLists.txt  package.xml
casadi_sample/include/: casadi_sample.h
casadi_sample/src/: casadi_nlopt.cpp  casadi_sample.cpp  casadi_sample2.cpp
mujoco_ros_control/: CMakeLists.txt  Makefile  mujoco_robot_hw_sim_plugin.xml  package.xml
mujoco_ros_control/cmake/: model_convert.cmake
mujoco_ros_control/include/mujoco_ros_control/: mujoco_default_robot_hw_sim.h  mujoco_ros_control.h  mujoco_visualization_utils.h
mujoco_ros_control/launch/: mujoco.launch
mujoco_ros_control/scripts/: mujoco_model_generator.py
mujoco_ros_control/src/: mujoco_default_robot_hw_sim.cpp  mujoco_ros_control.cpp  mujoco_visualization_utils.cpp
osqp_slsqp/: CMakeLists.txt  package.xml
osqp_slsqp/include/osqp_slsqp/: slsqp.h
osqp_slsqp/src/: sample_slsqp.cpp  sample_slsqp2.cpp
