<?xml version="1.0"?>
<package format="2">
  <name>casadi_eigen</name>
  <version>0.0.0</version>
  <description>conversion between CasADi and Eigen</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>casadi</depend>

</package>
