<?xml version="1.0"?>
<package format="2">
  <name>casadi_sample</name>
  <version>0.0.0</version>
  <description>sample program for casadi</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>casadi</depend>

  <export>

  </export>
</package>
