<?xml version="1.0"?>
<package format="2">
  <name>casadi_sample</name>
  <version>0.0.0</version>
  <description>sample program for CasADi</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>casadi</depend>
  <depend>casadi_eigen</depend>
  <depend>nlopt</depend>

</package>
